--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
  <!DOCTYPE html>
- <html>
+ <html lang="en">
  <head>
+ <meta charset="utf-8">
+ <link rel="stylesheet" type="text/css" href="styles/text.css">
  	<title>Cosmos</title>
  </head>
  <body>
 
- 		<h1>Cosmos</h1>
+ 	
+		<div class="moon"> 
+			<img src="img/moon.png" alt="moon">
+		</div>
+ 
+		<div class="maintext">
+			<h1 class="text1">Cosmos</h1>
+			<h1 class="text2">A mystery</h1>
+		</div> 
+	
 
  </body>
  </html>
