--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
- <meta charset="utf-8">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" type="text/css" href="styles/text.css">
  	<title>Cosmos</title>
  </head>
  <body>
 
- 	
-		<div class="moon"> 
-			<img src="img/moon.png" alt="moon">
-		</div>
- 
-		<div class="maintext">
-			<h1 class="text1">Cosmos</h1>
-			<h1 class="text2">A mystery</h1>
-		</div> 
-	
+<!-- Navigation -->
+
+<nav class="navbar">
+ 		<a href="About cosmos" >About cosmos</a>
+ 		<a href="Contact me" >Contact me</a>
+ 		<a href="Scientist" >Famous scientist</a>
+</nav>
+
+<!-- Background image/slideshow -->
+
+<section class="header" alt="space. cosmos, time, universe">
+		<img class="myslides" src="img/cosmos.png" style="width:100%">
+		<img class="myslides" src="img/cosmos2.jpg" style="width:100%">
+		<img class="myslides" src="img/cosmos3.jpg" style="width:100%">
+</section>
+
+<!--Cosmos description -->
+
+<section class="container" style="max-width:600px">
+		<h1 class="aboutcosmos">About cosmos</h1>
+		<p>Cosmos, a mystery in our eyes, but beauty in reality. What is above, below or to the sides of us is cosmos. According to Aristotle, we are on a planet that is in the center of universe, but scientist has leter found out that every planet is considered to be in the center, it is so extraordinarily large that we might not ever reach any of the corners of our universe. According to Hawking, our universe is expanding in a rapidly increasing rate, it is proven because the planets are slowly moving away. How? you may ask.. the biggest evidence right now is the doppler effect.
+		</p>
+</section>
+
+
+<!-- Footer -->
+
+
 
  </body>
  </html>
