--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 <!-- Background image/slideshow -->
 
 <section class="header" alt="space. cosmos, time, universe">
-		<img class="myslides" src="img/cosmos.png" style="width:100%">
-		<img class="myslides" src="img/cosmos2.jpg" style="width:100%">
-		<img class="myslides" src="img/cosmos3.jpg" style="width:100%">
+		<div class="headerslide">
+			<img class="myslides" src="img/cosmos.png" style="width:100%">
+			<img class="myslides" src="img/cosmos2.jpg" style="width:100%">
+			<img class="myslides" src="img/cosmos3.jpg" style="width:100%">
+		</div>
 </section>
 
 <!--Cosmos description -->
@@ -32,10 +34,9 @@
 		</p>
 </section>
 
-
 <!-- Footer -->
 
-
+<script src="scripts/script.css"></script>
 
  </body>
  </html>
